# yt-dlp-wrapper

./: .gitignore  CONFIGURATION.md  PLAN.md  README.md  config.py  main.py  pyproject.toml  requirements.txt
auth/: browser.py  pool.py
core/: channel_downloader.py  list_downloader.py  models.py
tests/: test_auth_pool.py  test_channel_downloader_utils.py  test_channel_list_cache.py  test_context.py  test_error_diagnosis.py  test_list_downloader_utils.py  test_parser.py  test_parser_logging.py  test_utils.py
yt_dlp_wrapper/: __init__.py  cli.py  config.py
yt_dlp_wrapper/auth/: browser.py  pool.py
yt_dlp_wrapper/core/: __init__.py  channel_downloader.py  context.py  diagnostics.py  error_diagnosis.py  list_downloader.py  models.py  parser.py  utils.py
yt_dlp_wrapper/downloaders/: channel.py  list.py
